Added a utility class